--- a/package.json
+++ b/package.json
@@ -1,26 +1,79 @@
 {
-  "name": "bd",
-  "version": "0.1.0",
+  "name": "twitterx-clone",
+  "version": "1.0.0",
+  "description": "A full-stack Twitter/X clone with Next.js, Express, MongoDB, and Socket.io",
+  "author": "Full-Stack Developer",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "concurrently \"npm run dev:next\" \"npm run dev:server\"",
+    "dev:next": "next dev",
+    "dev:server": "tsx watch server/index.ts",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "concurrently \"npm run start:next\" \"npm run start:server\"",
+    "start:next": "next start",
+    "start:server": "node dist/server/index.js",
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.0.0",
+    "cors": "^2.8.5",
+    "date-fns": "^3.0.6",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "framer-motion": "^12.23.24",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.303.0",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1",
     "next": "16.0.5",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-hot-toast": "^2.4.1",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.22",
+    "concurrently": "^8.2.2",
     "eslint": "^9",
     "eslint-config-next": "16.0.5",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
+    "tsx": "^4.7.0",
     "typescript": "^5"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
+  "keywords": [
+    "twitter-clone",
+    "social-media",
+    "nextjs",
+    "express",
+    "mongodb",
+    "typescript",
+    "socket.io",
+    "full-stack"
+  ]
 }
